--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -8,5 +8,5 @@ html {
 }
 
 .custom-img {
- background-image: url('https://images.unsplash.com/photo-1580256081112-e49377338b7f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80')
+ background-image: url('../public/front-page.jpg')
 }
